fix edit contact button position/spacing

--- a/Sparc.MCN/Html.scss
+++ b/Sparc.MCN/Html.scss
@@ -22,6 +22,7 @@
     --app-width: calc(100vw - 80px);
     --container-width: calc(100% - 46px);
     --sidebar-width: calc(100% - 64px);
+    --app-height: calc(100vh - 80px);
 }
 
 html, body {
